Relocate layer 2 discovery objects

--- a/pack/discovery.cfg
+++ b/pack/discovery.cfg
@@ -1,8 +1,23 @@
+##### Level 2 commands. That will be launched only after a sucessful layer 1 launch.
+### For cluster discovery
+## 
+# 
+define command {
+    command_name    safekit_discovery
+    command_line    $PLUGINSDIR$/discovery/cluster_discovery_runner.py -H $HOSTNAME$ -C $SNMPCOMMUNITYREAD$ -O $ARG1$
+}
+
+define discoveryrun {
+        discoveryrun_name       safekit
+        discoveryrun_command    safekit_discovery!$_HOSTOS$
+        os                      ^aix$|^linux$
+}
+
 #os is returned by the nmap discovery script
 define discoveryrule {
        discoveryrule_name       safekit
        creation_type            host
-       os			linux|aix
+       os			^linux$|^aix$
        safekit                  1
        +use                     safekit
 }
