Add services macros with detailled information used with detailled notifications

--- a/pack/services/check_safekit_cluster_state.cfg
+++ b/pack/services/check_safekit_cluster_state.cfg
@@ -5,4 +5,8 @@ define service{
    host_name	  	  safekit
    check_command  	  check_snmp_safekit!$KEY$
    duplicate_foreach      _safekit_modules
+
+   _DETAILLEDESC          Check Safekit cluster overall health status
+   _IMPACT                Critical: Cluster degraded state means lowered performance of not load-balanced applications. May lead to data loss or corruption, if last alive node dies
+   _FIXACTIONS            Search why cluster crashed and restart cluster services when it's fixed.
 }
