--- a/pack/services/check_safekit_cluster_state.cfg
+++ b/pack/services/check_safekit_cluster_state.cfg
@@ -1,6 +1,6 @@
 define service{
    service_description    $KEY$_state
-   use            	  generic-service
+   use            	  5min_short,generic-service
    register       	  0
    host_name	  	  safekit
    check_command  	  check_snmp_safekit!$KEY$
